--- a/index.html
+++ b/index.html
@@ -9,29 +9,54 @@
 <body>
     <header>
         <h1>Happy 11th Birthday, Caydence!</h1>
-        <p>Celebrating in Springfield, MO, with love from California!</p>
+        <p>Join the Party Today, April 13, 2025!</p>
     </header>
     <main>
         <section class="intro">
-            <h2>Welcome to Caydence's Coraline-Themed Party!</h2>
-            <p>Tomorrow, April 14, 2025, Caydence turns 11! Join us today for a spooky, magical adventure inspired by her favorite movie, <em>Coraline</em>.</p>
+            <h2>Caydence’s Birthday Bash!</h2>
+            <p>Tomorrow, April 14, 2025, Caydence turns 11! Today, we’re celebrating with her favorite things: <em>Coraline</em>, Chappell Roan’s music, and making sparkly bead bracelets!</p>
             <div class="buttons">
                 <button onclick="scrollToMessages()">Leave a Birthday Wish!</button>
-                <button onclick="showCoralineFact()">Discover a Coraline Secret</button>
+                <button onclick="showChappellFact()">Discover a Chappell Roan Fact</button>
             </div>
+        </section>
+        <section class="songs">
+            <h2>Songs from When Caydence Was Born</h2>
+            <p>These were big hits around 2014, when Caydence arrived!</p>
+            <ul>
+                <li>“Happy” by Pharrell Williams</li>
+                <li>“Shake It Off” by Taylor Swift</li>
+                <li>“All of Me” by John Legend</li>
+                <li>“Uptown Funk” by Mark Ronson ft. Bruno Mars</li>
+                <li>“Blank Space” by Taylor Swift</li>
+            </ul>
+        </section>
+        <section class="bracelet">
+            <h2>Make a Bead Bracelet Like Caydence!</h2>
+            <p>Caydence loves making bead bracelets (sometimes called candy jewelry). Here’s how you can make one too!</p>
+            <ol>
+                <li><strong>Get Your Stuff</strong>: Grab stretchy cord (like elastic string), colorful beads (plastic or glass), and scissors. Ask a grown-up for help with cutting!</li>
+                <li><strong>Measure the Cord</strong>: Cut a piece of cord about 10 inches long. It should fit around your wrist with a little extra.</li>
+                <li><strong>Add Beads</strong>: String beads onto the cord. Mix colors and shapes—like pink and purple for Chappell Roan vibes! Leave about 2 inches empty at each end.</li>
+                <li><strong>Tie It</strong>: Tie a tight double knot with the two ends of the cord. Ask a grown-up to make sure it’s secure.</li>
+                <li><strong>Try It On</strong>: Slip it on your wrist. If it’s too loose or tight, adjust the knot or add/remove beads.</li>
+                <li><strong>Show It Off</strong>: Wear your bracelet and tell Caydence about it in a birthday message!</li>
+            </ol>
+            <p>Tip: Use letter beads to spell “Caydence” or “11” for extra fun!</p>
         </section>
         <section id="messages" class="messages">
             <h2>Birthday Message Board</h2>
+            <p>Write a wish for Caydence or share what you love about her party!</p>
             <form id="message-form">
                 <input type="text" id="name-input" placeholder="Your Name" required>
-                <textarea id="message-input" placeholder="Write your birthday wish..." required></textarea>
+                <textarea id="message-input" placeholder="Your birthday wish..." required></textarea>
                 <button type="submit">Post Message</button>
             </form>
             <div id="message-board"></div>
         </section>
     </main>
     <footer>
-        <p>Made with love for Caydence's 11th birthday &copy; 2025</p>
+        <p>Made with sparkle for Caydence’s 11th birthday © 2025</p>
     </footer>
     <script src="script.js"></script>
 </body>
