--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="intro">
             <h2>Caydence’s Birthday Bash!</h2>
-            <p>Tomorrow, April 14, 2025, Caydence turns 11! Today, we’re celebrating with her favorite things: <em>Coraline</em>, Chappell Roan’s music, and making sparkly bead bracelets!</p>
+            <p>Tomorrow, April 14, 2025, Caydence turns 11! Today, we’re celebrating her special day. Caydence likes <em>Coraline</em>, Chappell Roan’s music, and making wild color combo bead bracelets!</p>
             <div class="buttons">
                 <button onclick="scrollToMessages()">Leave a Birthday Wish!</button>
                 <button onclick="showChappellFact()">Discover a Chappell Roan Fact</button>
