--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
                 <li>“Blank Space” by Taylor Swift</li>
             </ul>
         </section>
+        <section class="songs">
+    <h2>Songs from When Caydence Was Born</h2>
+    <p>These were big hits around 2014, when Caydence arrived!</p>
+    <ul>
+        <li>“Happy” by Pharrell Williams</li>
+        <li>“Shake It Off” by Taylor Swift</li>
+        <li>“All of Me” by John Legend</li>
+        <li>“Uptown Funk” by Mark Ronson ft. Bruno Mars</li>
+        <li>“Blank Space” by Taylor Swift</li>
+    </ul>
+</section>
+<section class="achievements">
+    <h2>Cool Things That Happened on April 14</h2>
+    <p>Caydence’s birthday shares the day with these awesome moments in history!</p>
+    <ul>
+        <li><strong>1828</strong>: Noah Webster made the first American Dictionary, full of word treasures!</li>
+        <li><strong>1900</strong>: The Paris World’s Fair showed off art and inventions, like a global party!</li>
+        <li><strong>1939</strong>: <em>The Grapes of Wrath</em> book told a big story about hope, winning awards!</li>
+        <li><strong>1956</strong>: The videotape recorder was born, letting us save TV shows forever!</li>
+        <li><strong>1981</strong>: Space shuttle Columbia flew back from space, like a reusable rocket!</li>
+        <li><strong>2003</strong>: Scientists mapped our DNA, finding secrets of how people are made!</li>
+    </ul>
+</section>
+<section class="bracelet">
+    <!-- Rest of the bracelet section remains unchanged -->
         <section class="bracelet">
             <h2>Make a Bead Bracelet Like Caydence!</h2>
             <p>Caydence loves making bead bracelets (sometimes called candy jewelry). Here’s how you can make one too!</p>
