--- a/index.html
+++ b/index.html
@@ -3,86 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy 11th Birthday, Caydence!</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Caydence's Birthday</title>
+    <link rel="stylesheet" href="styles
+
+ 
+
+.css">
 </head>
 <body>
-    <header>
-        <h1>Happy 11th Birthday, Caydence!</h1>
-        <p>Join the Party Today, April 13, 2025!</p>
-    </header>
-    <main>
-        <section class="intro">
-            <h2>Caydence’s Birthday Bash!</h2>
-            <p>Tomorrow, April 14, 2025, Caydence turns 11! Today, we’re celebrating her special day. Caydence likes <em>Coraline</em>, Chappell Roan’s music, and making wild color combo bead bracelets!</p>
-            <div class="buttons">
-                <button onclick="scrollToMessages()">Leave a Birthday Wish!</button>
-                <button onclick="showChappellFact()">Discover a Chappell Roan Fact</button>
-            </div>
-        </section>
-        <section class="songs">
-            <h2>Songs from When Caydence Was Born</h2>
-            <p>These were big hits around 2014, when Caydence arrived!</p>
-            <ul>
-                <li>“Happy” by Pharrell Williams</li>
-                <li>“Shake It Off” by Taylor Swift</li>
-                <li>“All of Me” by John Legend</li>
-                <li>“Uptown Funk” by Mark Ronson ft. Bruno Mars</li>
-                <li>“Blank Space” by Taylor Swift</li>
-            </ul>
-        </section>
-        <section class="songs">
-    <h2>Songs from When Caydence Was Born</h2>
-    <p>These were big hits around 2014, when Caydence arrived!</p>
+    <h1>Happy Birthday, Caydence!</h1>
+    <h2>Songs that were popular when Caydence was born</h2>
     <ul>
-        <li>“Happy” by Pharrell Williams</li>
-        <li>“Shake It Off” by Taylor Swift</li>
-        <li>“All of Me” by John Legend</li>
-        <li>“Uptown Funk” by Mark Ronson ft. Bruno Mars</li>
-        <li>“Blank Space” by Taylor Swift</li>
+        <!-- Existing song list, e.g., -->
+        <li>Song 1</li>
+        <li>Song 2</li>
     </ul>
-</section>
-<section class="achievements">
-    <h2>Cool Things That Happened on April 14</h2>
-    <p>Caydence’s birthday shares the day with these awesome moments in history!</p>
-    <ul>
-        <li><strong>1828</strong>: Noah Webster made the first American Dictionary, full of word treasures!</li>
-        <li><strong>1900</strong>: The Paris World’s Fair showed off art and inventions, like a global party!</li>
-        <li><strong>1939</strong>: <em>The Grapes of Wrath</em> book told a big story about hope, winning awards!</li>
-        <li><strong>1956</strong>: The videotape recorder was born, letting us save TV shows forever!</li>
-        <li><strong>1981</strong>: Space shuttle Columbia flew back from space, like a reusable rocket!</li>
-        <li><strong>2003</strong>: Scientists mapped our DNA, finding secrets of how people are made!</li>
-    </ul>
-</section>
-<section class="bracelet">
-    <!-- Rest of the bracelet section remains unchanged -->
-        <section class="bracelet">
-            <h2>Make a Bead Bracelet Like Caydence!</h2>
-            <p>Caydence loves making bead bracelets (sometimes called candy jewelry). Here’s how you can make one too!</p>
-            <ol>
-                <li><strong>Get Your Stuff</strong>: Grab stretchy cord (like elastic string), colorful beads (plastic or glass), and scissors. Ask a grown-up for help with cutting!</li>
-                <li><strong>Measure the Cord</strong>: Cut a piece of cord about 10 inches long. It should fit around your wrist with a little extra.</li>
-                <li><strong>Add Beads</strong>: String beads onto the cord. Mix colors and shapes—like pink and purple for Chappell Roan vibes! Leave about 2 inches empty at each end.</li>
-                <li><strong>Tie It</strong>: Tie a tight double knot with the two ends of the cord. Ask a grown-up to make sure it’s secure.</li>
-                <li><strong>Try It On</strong>: Slip it on your wrist. If it’s too loose or tight, adjust the knot or add/remove beads.</li>
-                <li><strong>Show It Off</strong>: Wear your bracelet and tell Caydence about it in a birthday message!</li>
-            </ol>
-            <p>Tip: Use letter beads to spell “Caydence” or “11” for extra fun!</p>
-        </section>
-        <section id="messages" class="messages">
-            <h2>Birthday Message Board</h2>
-            <p>Write a wish for Caydence or share what you love about her party!</p>
-            <form id="message-form">
-                <input type="text" id="name-input" placeholder="Your Name" required>
-                <textarea id="message-input" placeholder="Your birthday wish..." required></textarea>
-                <button type="submit">Post Message</button>
-            </form>
-            <div id="message-board"></div>
-        </section>
-    </main>
-    <footer>
-        <p>Made with sparkle for Caydence’s 11th birthday © 2025</p>
-    </footer>
+
+    <h2>Create Your Own Art!</h2>
+    <p>Use the buttons below to create cool images based on the time of day!</p>
+    <button onclick="drawAbstract()">Create Abstract Art</button>
+    <button onclick="drawSun()">Create Sun Picture</button>
+    <canvas id="artCanvas" width="500" height="400"></canvas>
+
     <script src="script.js"></script>
 </body>
 </html>
