--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caydence's Birthday</title>
-    <link rel="stylesheet" href="styles
-
- 
-
-.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="consentBanner" class="consent-banner">
+        <p>We use anonymous analytics to improve the site. No personal data is collected. <a href="#privacy">Learn more</a>.</p>
+        <button onclick="acceptConsent()">Accept</button>
+        <button onclick="declineConsent()">Decline</button>
+    </div>
+
     <h1>Happy Birthday, Caydence!</h1>
     <h2>Songs that were popular when Caydence was born</h2>
     <ul>
-        <!-- Existing song list, e.g., -->
-        <li>Song 1</li>
-        <li>Song 2</li>
+        <li>Umbrella - Rihanna ft. Jay-Z</li>
+        <li>Hey There Delilah - Plain White T's</li>
+        <li>Beautiful Girls - Sean Kingston</li>
     </ul>
 
     <h2>Create Your Own Art!</h2>
@@ -24,6 +26,11 @@
     <button onclick="drawAbstract()">Create Abstract Art</button>
     <button onclick="drawSun()">Create Sun Picture</button>
     <canvas id="artCanvas" width="500" height="400"></canvas>
+
+    <div id="privacy" style="margin-top: 20px;">
+        <h3>Privacy Notice</h3>
+        <p>We collect anonymous data (e.g., browser type, visit time) to understand site usage. No identifiable information is stored. Data is kept locally or sent to secure analytics with your consent.</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
