--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="accessDenied" style="display: none;">
+        <h1>Access Denied</h1>
+        <p>Sorry, this site is not available in your area.</p>
+    </div>
+
     <div id="passwordPrompt" class="password-prompt">
         <p>Enter the party password to join Caydence's birthday fun!</p>
         <input type="password" id="passwordInput">
