--- a/index.html
+++ b/index.html
@@ -7,20 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="accessDenied" class="hidden">
-        <h1>Access Denied</h1>
-        <p>Sorry, this site is not available in your area.</p>
-    </div>
-
-    <div id="passwordPrompt" class="password-prompt">
-        <p>Enter the party password to join Caydence's birthday fun!</p>
-        <label for="passwordInput">Password:</label>
-        <input type="password" id="passwordInput">
-        <button id="passwordButton">Enter</button>
-        <p id="passwordError" class="error hidden">Incorrect password. Please try again.</p>
-    </div>
-
-    <div id="mainContent" class="hidden">
+    <div id="mainContent">
         <h1>Happy Birthday, Caydence! 🎉</h1>
 
         <h2>Popular Songs When You Were Born</h2>
@@ -61,4 +48,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
