--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
         <h2>A Special Verse for Caydence</h2>
         <p><em>Jeremiah 29:11</em>: “For I know the plans I have for you,” declares the Lord, “plans to give you hope and a future.”</p>
+
+        <!-- Special button to send a random birthday message -->
+        <button id="sendEmailButton">Send a Special Birthday Message!</button>
     </div>
 
     <script src="script.js"></script>
