--- a/index.html
+++ b/index.html
@@ -5,48 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caydence's 11th Birthday</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="mainContent">
-        <h1>Happy Birthday, Caydence! 🎉</h1>
+    <header>
+        <h1 class="fade-in">Happy Birthday, Caydence! 🎉</h1>
+    </header>
+    <main>
+        <section class="content-box">
+            <h2>Popular Songs When You Were Born</h2>
+            <ul>
+                <li>Happy - Pharrell Williams</li>
+                <li>All of Me - John Legend</li>
+                <li>Dark Horse - Katy Perry</li>
+            </ul>
+        </section>
 
-        <h2>Popular Songs When You Were Born</h2>
-        <ul>
-            <li>Happy - Pharrell Williams</li>
-            <li>All of Me - John Legend</li>
-            <li>Dark Horse - Katy Perry</li>
-        </ul>
+        <section class="content-box">
+            <h2>Awesome Events from April 14, 2014</h2>
+            <ul>
+                <li><strong>Music:</strong> "Happy" by Pharrell Williams was the #1 song!</li>
+                <li><strong>Books:</strong> <em>The Goldfinch</em> won the Pulitzer Prize.</li>
+                <li><strong>Art:</strong> Banksy created new street art around this time!</li>
+            </ul>
+        </section>
 
-        <h2>Awesome Events from April 14, 2014</h2>
-        <ul>
-            <li><strong>Music:</strong> "Happy" by Pharrell Williams was the #1 song!</li>
-            <li><strong>Books:</strong> <em>The Goldfinch</em> won the Pulitzer Prize.</li>
-            <li><strong>Art:</strong> Banksy created new street art around this time!</li>
-        </ul>
+        <section class="content-box">
+            <h2>Create Your Own Art!</h2>
+            <div class="button-group">
+                <button id="abstractArtButton">Create Abstract Art</button>
+                <button id="sunArtButton">Create Sun Picture</button>
+            </div>
+            <canvas id="artCanvas" width="500" height="400"></canvas>
+        </section>
 
-        <h2>Create Your Own Art!</h2>
-        <button id="abstractArtButton">Create Abstract Art</button>
-        <button id="sunArtButton">Create Sun Picture</button>
-        <canvas id="artCanvas" width="500" height="400"></canvas>
+        <section class="content-box">
+            <h2>Leave a Birthday Message!</h2>
+            <div class="input-group">
+                <input type="text" id="messageInput" placeholder="Your message...">
+                <button id="messageButton">Send</button>
+            </div>
+            <div id="messageBoard"></div>
+        </section>
 
-        <h2>Leave a Birthday Message!</h2>
-        <input type="text" id="messageInput" placeholder="Your message...">
-        <button id="messageButton">Send</button>
-        <div id="messageBoard"></div>
+        <section class="content-box">
+            <h2>Guess the Birthday Number!</h2>
+            <p>Try to guess the secret number (1–100) in 10 tries!</p>
+            <div class="input-group">
+                <input type="number" id="guessInput" min="1" max="100">
+                <button id="guessButton">Guess!</button>
+            </div>
+            <p id="gameFeedback">Start guessing!</p>
+            <p id="guessesLeft">Guesses left: 10</p>
+        </section>
 
-        <h2>Guess the Birthday Number!</h2>
-        <p>Try to guess the secret number (1–100) in 10 tries!</p>
-        <input type="number" id="guessInput" min="1" max="100">
-        <button id="guessButton">Guess!</button>
-        <p id="gameFeedback">Start guessing!</p>
-        <p id="guessesLeft">Guesses left: 10</p>
+        <section class="content-box">
+            <h2>A Special Verse for Caydence</h2>
+            <p><em>Jeremiah 29:11</em>: “For I know the plans I have for you,” declares the Lord, “plans to give you hope and a future.”</p>
+        </section>
 
-        <h2>A Special Verse for Caydence</h2>
-        <p><em>Jeremiah 29:11</em>: “For I know the plans I have for you,” declares the Lord, “plans to give you hope and a future.”</p>
-
-        <!-- Special button to send a random birthday message -->
-        <button id="sendEmailButton">Send a Special Birthday Message!</button>
-    </div>
+        <section class="content-box">
+            <button id="sendEmailButton">Send a Special Birthday Message!</button>
+        </section>
+    </main>
+    <footer>
+        <p>Created with 💖 for Caydence's 11th Birthday</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
