--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <section class="content-box">
             <h2>Popular Songs When You Were Born</h2>
             <ul>
-                <li>Happy - Pharrell Williams</li>
                 <li>All of Me - John Legend</li>
                 <li>Dark Horse - Katy Perry</li>
             </ul>
@@ -24,7 +23,6 @@
         <section class="content-box">
             <h2>Awesome Events from April 14, 2014</h2>
             <ul>
-                <li><strong>Music:</strong> "Happy" by Pharrell Williams was the #1 song!</li>
                 <li><strong>Books:</strong> <em>The Goldfinch</em> won the Pulitzer Prize.</li>
                 <li><strong>Art:</strong> Banksy created new street art around this time!</li>
             </ul>
@@ -62,6 +60,34 @@
         <section class="content-box">
             <h2>A Special Verse for Caydence</h2>
             <p><em>Jeremiah 29:11</em>: “For I know the plans I have for you,” declares the Lord, “plans to give you hope and a future.”</p>
+        </section>
+
+        <section class="content-box">
+            <h2>🎤 Fun Facts About Chappell Roan</h2>
+            <ul>
+                <li>Her real name is **Kayleigh Rose Amstutz**.</li>
+                <li>She got her stage name from her **grandpa’s favorite song**.</li>
+                <li>She **loves gaming**, especially **The Sims**!</li>
+                <li>She once had a **chicken named Lady Gaga**! 🐔</li>
+            </ul>
+        </section>
+
+        <section class="content-box">
+            <h2>📜 Historical Events on April 14</h2>
+            <ul>
+                <li>**1865:** President **Abraham Lincoln** was shot at Ford’s Theatre.</li>
+                <li>**966:** Poland’s ruler **Mieszko I** converted to Christianity.</li>
+                <li>**43 BC:** The **Battle of Forum Gallorum** took place in Ancient Rome.</li>
+            </ul>
+        </section>
+
+        <section class="content-box">
+            <h2>🎨 Famous Artworks</h2>
+            <div class="art-gallery">
+                <img src="banksy_art.jpg" alt="Banksy Artwork">
+                <img src="basquiat_art.jpg" alt="Jean-Michel Basquiat Artwork">
+                <img src="duchamp_art.jpg" alt="Marcel Duchamp Artwork">
+            </div>
         </section>
 
         <section class="content-box">
